--- a/newscrawler/test.ipynb
+++ b/newscrawler/test.ipynb
@@ -17,12 +17,12 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
       "\n",
       "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
-      "100    21  100    21    0     0     98      0 --:--:-- --:--:-- --:--:--    99\n"
+      "100    21  100    21    0     0    122      0 --:--:-- --:--:-- --:--:--   122\n"
      ]
     }
    ],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 22
     }
    ],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -88,12 +88,12 @@
      "name": "stdout",
      "text": [
       "health status index  uuid                   pri rep docs.count docs.deleted store.size pri.store.size\n",
-      "yellow open   movies dIXwh49FROmRR6WNFsCo6A   1   1         30            0     14.2kb         14.2kb\n",
+      "yellow open   movies 7gNmflYSQx6O_yIweo4wNw   1   1         30            0     14.2kb         14.2kb\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
       "\n",
       "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
-      "100   204  100   204    0     0  10200      0 --:--:-- --:--:-- --:--:-- 10200\n"
+      "100   204  100   204    0     0   7285      0 --:--:-- --:--:-- --:--:--  7555\n"
      ]
     }
    ],
@@ -106,44 +106,36 @@
     "with open('dataFin.json') as json_data:\n",
     "   v = json.load(json_data)\n",
     "\n",
-    "print(v)"
+    "#print(v)"
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 20,
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[{'titre': 'La vie est belle', 'Evaluation spectateur': 8.2, 'image_urls': 'https://media.senscritique.com/media/000016162240/150/La_vie_est_belle.jpg'}, {'titre': 'Christmas Story', 'Evaluation spectateur': 6.2, 'image_urls': 'https://media.senscritique.com/media/000016127185/150/Christmas_Story.jpg'}, {'titre': 'Tout... sauf en famille', 'Evaluation spectateur': 4.6, 'image_urls': 'https://media.senscritique.com/media/000000080288/150/Tout_sauf_en_famille.jpg'}, {'titre': 'Super Noël', 'Evaluation spectateur': 5.7, 'image_urls': 'https://media.senscritique.com/media/000018248554/150/Super_Noel.jpg'}, {'titre': 'Hyper Noël', 'Evaluation spectateur': 4.9, 'image_urls': 'https://media.senscritique.com/media/000018252931/150/Hyper_Noel.jpg'}, {'titre': 'Super Noël méga givré (Super Noël 3)', 'Evaluation spectateur': 4.0, 'image_urls': 'https://media.senscritique.com/media/000005109764/150/Esprit_de_famille.jpg'}, {'titre': 'Le Grinch', 'Evaluation spectateur': 5.2, 'image_urls': 'https://media.senscritique.com/media/000008428263/150/La_Fille_du_pere_Noel_2_Panique_a_Polaris.jpg'}, {'titre': 'Le Drôle de Noël de Scrooge', 'Evaluation spectateur': 6.2, 'image_urls': 'https://media.senscritique.com/media/000006328396/150/Richie_Rich_Meilleurs_Voeux.jpg'}, {'titre': 'Le Pôle Express', 'Evaluation spectateur': 6.0, 'image_urls': 'https://media.senscritique.com/media/000018279972/150/Marie_avant_Noel.jpg'}, {'titre': 'Voisin contre voisin', 'Evaluation spectateur': 4.5, 'image_urls': 'https://media.senscritique.com/media/000000153845/150/Un_Noel_de_folie.jpg'}, {'titre': 'Esprit de famille', 'Evaluation spectateur': 5.1, 'image_urls': 'https://media.senscritique.com/media/000017422684/150/Le_Noel_de_Mickey.jpg'}, {'titre': 'Famille à louer', 'Evaluation spectateur': 4.6, 'image_urls': 'https://media.senscritique.com/media/000005980281/150/Les_Amoureux_de_Noel.jpg'}, {'titre': 'Un Noël de folie !', 'Evaluation spectateur': 4.9, 'image_urls': 'https://media.senscritique.com/media/000000151379/150/Le_Sapin_a_les_boules_2_Cousin_Eddie.jpg'}, {'titre': 'Elfe', 'Evaluation spectateur': 5.4, 'image_urls': 'https://media.senscritique.com/media/000005882762/150/Les_12_Chiens_de_Noel.jpg'}, {'titre': 'Frère Noël', 'Evaluation spectateur': 4.7, 'image_urls': 'https://media.senscritique.com/media/000000179553/150/Super_Noel_mega_givre_Super_Noel_3.png'}, {'titre': \"Maman, j'ai raté l'avion !\", 'Evaluation spectateur': 6.3, 'image_urls': 'https://media.senscritique.com/media/000000025473/150/Maman_j_ai_encore_rate_l_avion.jpg'}, {'titre': \"Maman, j'ai encore raté l'avion...\", 'Evaluation spectateur': 5.7, 'image_urls': 'https://media.senscritique.com/media/000000010862/150/La_Fille_du_pere_Noel.jpg'}, {'titre': 'Richie Rich : Meilleurs Vœux', 'Evaluation spectateur': 3.5, 'image_urls': 'https://media.senscritique.com/media/000007878081/150/Le_Pole_Express.jpg'}, {'titre': 'Le Sapin a les boules', 'Evaluation spectateur': 5.7, 'image_urls': 'https://media.senscritique.com/media/000006182927/150/Le_Drole_de_Noel_de_Scrooge.jpg'}, {'titre': 'Le Sapin a les boules 2 : Cousin Eddie', 'Evaluation spectateur': 0, 'image_urls': 'https://media.senscritique.com/media/000017493323/150/Le_Grinch.jpg'}, {'titre': 'À la maison pour Noël', 'Evaluation spectateur': 4.6, 'image_urls': 'https://media.senscritique.com/media/000004203183/150/This_Christmas.jpg'}, {'titre': 'La Fille du père Noël', 'Evaluation spectateur': 3.9, 'image_urls': 'https://media.senscritique.com/media/000004022628/150/Maman_j_ai_rate_l_avion.jpg'}, {'titre': 'La Fille du père Noël 2 : Panique à Polaris', 'Evaluation spectateur': 4.2, 'image_urls': 'https://media.senscritique.com/media/000000116149/150/Frere_Noel.jpg'}, {'titre': 'Un fiancé pour Noël', 'Evaluation spectateur': 5.0, 'image_urls': 'https://media.senscritique.com/media/000004362031/150/Un_fiance_pour_Noel.jpg'}, {'titre': 'Trois Jours avant Noël', 'Evaluation spectateur': 0, 'image_urls': 'https://media.senscritique.com/media/000000162876/150/Elfe.jpg'}, {'titre': 'This Christmas', 'Evaluation spectateur': 5.6, 'image_urls': 'https://media.senscritique.com/media/000000095295/150/Voisin_contre_voisin.jpg'}, {'titre': 'Les Amoureux de Noël', 'Evaluation spectateur': 5.4, 'image_urls': 'https://media.senscritique.com/media/000000130799/150/Le_Sapin_a_les_boules.jpg'}, {'titre': 'Marié avant Noël', 'Evaluation spectateur': 5.4, 'image_urls': 'https://media.senscritique.com/media/000006981491/150/Famille_a_louer.jpg'}, {'titre': 'Le Noël de Mickey', 'Evaluation spectateur': 7.5, 'image_urls': 'https://media.senscritique.com/media/000019110917/150/A_la_maison_pour_Noel.jpg'}, {'titre': 'Les 12 Chiens de Noël', 'Evaluation spectateur': 5.2, 'image_urls': 'https://media.senscritique.com/media/000008640816/150/Trois_Jours_avant_Noel.jpg'}]\n"
-     ]
-    }
-   ]
+   "execution_count": 5,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'La vie est belle': 'https://media.senscritique.com/media/000016162240/150/La_vie_est_belle.jpg',\n",
-       " 'Le Noël de Mickey': 'https://media.senscritique.com/media/000019110917/150/A_la_maison_pour_Noel.jpg',\n",
-       " \"Maman, j'ai raté l'avion !\": 'https://media.senscritique.com/media/000000025473/150/Maman_j_ai_encore_rate_l_avion.jpg',\n",
-       " 'Christmas Story': 'https://media.senscritique.com/media/000016127185/150/Christmas_Story.jpg',\n",
-       " 'Le Drôle de Noël de Scrooge': 'https://media.senscritique.com/media/000006328396/150/Richie_Rich_Meilleurs_Voeux.jpg',\n",
-       " 'Le Pôle Express': 'https://media.senscritique.com/media/000018279972/150/Marie_avant_Noel.jpg',\n",
-       " 'Super Noël': 'https://media.senscritique.com/media/000018248554/150/Super_Noel.jpg',\n",
-       " \"Maman, j'ai encore raté l'avion...\": 'https://media.senscritique.com/media/000000010862/150/La_Fille_du_pere_Noel.jpg',\n",
-       " 'Le Sapin a les boules': 'https://media.senscritique.com/media/000006182927/150/Le_Drole_de_Noel_de_Scrooge.jpg',\n",
-       " 'This Christmas': 'https://media.senscritique.com/media/000000095295/150/Voisin_contre_voisin.jpg'}"
+       "{'La vie est belle': 8.2,\n",
+       " 'Le Noël de Mickey': 7.5,\n",
+       " \"Maman, j'ai raté l'avion !\": 6.3,\n",
+       " 'Christmas Story': 6.2,\n",
+       " 'Le Drôle de Noël de Scrooge': 6.2,\n",
+       " 'Le Pôle Express': 6.0,\n",
+       " 'Super Noël': 5.7,\n",
+       " \"Maman, j'ai encore raté l'avion...\": 5.7,\n",
+       " 'Le Sapin a les boules': 5.7,\n",
+       " 'This Christmas': 5.6}"
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 25
     }
    ],
    "source": [
@@ -157,37 +149,15 @@
     "}\n",
     "\n",
     "result = es_client.search(index=\"movies\", body=QUERY)\n",
-    "{elt['_source']['titre']:elt['_source']['image_urls']  for elt in result[\"hits\"][\"hits\"]}"
+    "{elt['_source']['titre']:elt['_source']['Evaluation spectateur']  for elt in result[\"hits\"][\"hits\"]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[\"Maman, j'ai raté l'avion !\", \"Maman, j'ai encore raté l'avion...\"]\n"
-     ]
-    }
-   ],
-   "source": [
-    "def search_by_word(film):\n",
-    "    QUERY = {\n",
-    "        \"query\": {\n",
-    "            \"multi_match\" : {\n",
-    "                \"query\":    film,\n",
-    "                \"fields\": [ \"titre\", \"overview\" ] \n",
-    "                }\n",
-    "            }\n",
-    "        }\n",
-    "    result = es_client.search(index=\"movies\", body=QUERY)\n",
-    "    return [elt['_source']['titre']  for elt in result[\"hits\"][\"hits\"]]\n",
-    "\n",
-    "print(search_by_word('maman'))"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
